<resources>
    <string name="app_name">English_App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--  ALL ABOUT COLLEGE FRAGMENT  -->
    <!--  college page words of college cardView BEFORE expand  -->
    <string name="extendText">展開</string>
    <string name="shrinkText">收起</string>


    <!--  college page words of college cardView AFTER expand  -->
    <string name="cardView_detail_vocab">
        <b><i>鴨鴨院長歡迎您來到單字學院!\n</i></b>在這裡你可以查看國小、國中、高中以及各類英文檢定考的英文單字 !我們按照字母排序，分成了多個單元，一天一個單元，就能輕鬆提升單字量哦～
    </string>

    <string name="cardView_detail_phrase">
        <b><i>企鵝院長歡迎您來到片語學院!\n</i></b>在這裡除了能學習生活中常用的片語外，我們也特別整理了歷年大考中曾出現的片語提供大家複習。\n提升片語量也能讓您的文章用詞更精美，是不是很讓人心動呢?那就跟著我們的腳步一起學習吧!
    </string>

    <string name="cardView_detail_reading">
        <b><i>龍龍院長歡迎您來到閱讀學院!\n</i></b>想和國際接軌嗎?那來這裡就對了!\n你可以閱讀我們推薦的網路新聞，點擊你有興趣的新聞，會挑轉到網頁歐，跟著我們一起快樂閱讀吧！\n如果看得不夠過癮的話，可以點擊右下方圖書館查看更多網路小說喔!
    </string>

    <string name="cardView_detail_compete">
        <b><i>狐狸院長歡迎您來到競賽學院!\n</i></b>經過各個學院的磨練後，快來挑戰看看自己的實力吧! 在這裡你可以選擇各類型考試小遊戲，每次隨機出題! 也有歷屆試題讓大家練習哦~ 累積積分!提升自己的level吧!(可至個人資料查看)
    </string>


    <!--  IMAGE BUTTONS IN DORM FRAGMENT  -->
    <string name="imgbtn_profile">btn to user profile</string>
    <string name="imgbtn_cal">btn to user calendar</string>
    <string name="imgbtn_task">btn to user tasks</string>
    <string name="imgbtn_clock">btn to user clock</string>
    <string name="imgbtn_friend">btn to user friend list</string>
    <string name="imgbtn_note">btn to user notes</string>
    <string name="imgbtn_coll">btn to user collections</string>
    <string name="imgbtn_wrong">btn to user wrong notes</string>

    <!--  My Friend  -->
    <string name="addFriendHint">欲加好友可於"我的個人檔案"提供ID給好友喔!</string>

    <!--  Vocabulary activity  -->
    <string name="v_title">- Vocabulary -</string>
    <string name="v_sub_title">歡迎來到單字學院</string>
    <string name="dummy_text">dsgffdsgffffffffffgfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffsdtrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrdsgffffffffffgfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffsdtrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrdsgffffffffffgfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffsdtrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrffffffffgfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffsdtrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr</string>

    <!--  Phrase activity  -->
    <string name="p_title">- Phrase -</string>
    <string name="p_sub_title">歡迎來到片語學院</string>

    <!--  Reading activity  -->
    <string name="r_title">- Reading -</string>
    <string name="r_sub_title">歡迎來到閱讀學院</string>

    <!--  Compete activity  -->
    <string name="c_title">- Competition -</string>
    <string name="c_sub_title">歡迎來到競賽學院</string>

    <!--  Vocabulary RCV  -->
    <string name="voc_rcv_text_elem">國小</string>
    <string name="voc_rcv_text_jhs">國中</string>
    <string name="voc_rcv_text_hs">高中</string>
    <string name="voc_rcv_text_toeic">TOEIC</string>
    <string name="voc_rcv_text_toefl">TOEFL</string>
    <string name="voc_rcv_text2">單元</string>

    <!--  Phrase RCV  -->
    <string name="p_rcv_title">全部</string>
    <string name="p_rcv_unit">單元</string>

    <!--  Collection Activity  -->
    <string name="coll_title">我的收藏</string>
    <string name="coll_college">單字學院</string>

    <!--  My Wrong Activity -->
    <string name="wrong_title">錯誤題目</string>

    <!--  Task Activity  -->
    <string name="task_title">我的任務</string>

    <string name="score">Score 0/10</string>
    <string name="question_number">1/10 Question</string>
    <string name="question_number5">1/5 Question</string>
    <string name="question_number1">1 Question</string>

    <string name="question_1">What technology is used to make telephone calls over the internet possible?</string>
    <string name="question1_A">Bluetooth</string>
    <string name="question1_B">Ethernet</string>
    <string name="question1_C">NFC</string>
    <string name="question1_D">VoIP</string>
    <string name="answer_1">VoIP</string>


    <string name="question_2">Which computer language is the most widely used?</string>
    <string name="question_2A">C#</string>
    <string name="question_2B">Swift</string>
    <string name="question_2C">PHP</string>
    <string name="question_2D">Java</string>
    <string name="answer_2">Java</string>


    <string name="question_3"> Which of the following is an important step towards the paperless concept?</string>
    <string name="question_3A"> Doxing</string>
    <string name="question_3B">Debugging</string>
    <string name="question_3C">Downloading</string>
    <string name="question_3D">Digitizing</string>
    <string name="answer_3">Digitizing</string>

    <string name="question_4">Approximately, how much data exists in the digital universe today?</string>
    <string name="question_4A">40 Gigabytes</string>
    <string name="question_4B">40 Terabytes</string>
    <string name="question_4C">40 Megabytes</string>
    <string name="question_4D">40 Zetabytes</string>
    <string name="answer_4">2.7 Zetabytes</string>

    <string name="question_5">Making a compressed digital archive might produce what type of file format?</string>
    <string name="question_5A"> PDF</string>
    <string name="question_5B">JPEG</string>
    <string name="question_5C">MP3</string>
    <string name="question_5D">ZIP</string>
    <string name="answer_5">JPEG</string>

    <string name="question_6">What is our Channel Name ?</string>
    <string name="question_6A"> Tech Pro</string>
    <string name="question_6B">Tech</string>
    <string name="question_6C">Projects</string>
    <string name="question_6D">Tech Projects</string>
    <string name="answer_6">Tech Projects</string>

    <string name="question_7">What is my name ?</string>
    <string name="question_7A">Brijesh</string>
    <string name="question_7B">Sam</string>
    <string name="question_7C">Karan</string>
    <string name="question_7D">Programmer</string>
    <string name="answer_7">Brijesh</string>

    <string name="question_8">What is part of a database that holds only one type of information?</string>
    <string name="question_8A"> Report</string>
    <string name="question_8B">Field</string>
    <string name="question_8C">Record</string>
    <string name="question_8D">File</string>
    <string name="answer_8">Field</string>
    <string name="selected_option">SelectedOption</string>
    <string name="correct_answer">CorrectAnswer</string>

    <!--  About us  -->
    <string name="abs_Title01">歡迎來到英格利許學校！</string>
    <string name="abs_article01">這邊有提供單字、片語和閱讀方面的學習，也有測驗的功能能讓大家驗收學習成果，大家透過手機就能輕鬆學習英文。為了增加趣味性，我們也加入了許多社群功能，聽了是不是很心動呢～快跟我們一起快樂學英文吧！</string>
    <string name="abs_Title02">以下為app提供的服務</string>

    <string name="abs_Title03">註冊/登入系統</string>
    <string name="abs_article03">每個玩家都有屬於自己的帳號，方便紀錄自己的好友、等級等等，忘記密碼的話也有提供更改資料的服務，玩家有能到「我的個人資料」查看所有相關資訊。</string>

    <string name="abs_Title04">四大學院</string>
    <string name="abs_article04">分別有單字學院、片語學院、閱讀學院和競賽學院，前面三個學院有提供適合各個年齡層的學習資提供大家閲讀，競賽學院則是提供各種類型的題目給大家練習，驗證前面學習的成果。</string>

    <string name="abs_Title05">交誼廳</string>
    <string name="abs_article05">玩家可以透過交誼廳和其他玩家聊天或是詢問問題（此為公開平台，而非私訊!），會顯示留言發布時間以及使用者名稱和ID喔!</string>

    <string name="abs_Title06">我的宿舍</string>
    <string name="abs_article06">點擊圖像即可到達特定頁面，可點擊左上角的查看提示來查看app提供的服務，包括個人資料查詢、錯誤題目、收藏題目、我的任務及我的好友</string>

    <string name="abs_Title07">圖書館</string>
    <string name="abs_article07">這邊珍藏了我們推薦的書單，讓玩家能有更多元的選項，點擊想要的書籍會連結至網路小說檔案下載點!</string>

    <string name="abs_Title08">使用者等級計算說明</string>
    <string name="abs_article08">當使用者去競賽學院遊玩，每完成一場遊戲，我們會累加使用者的個人分數，可至我的個人資料查看你的等級哪了喔!</string>


</resources>