<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reading_bg"
    tools:context=".colleges.reading.ReadingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent" >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/r_title"
            app:contentScrim="@color/reading_collapse_topbar"

            app:expandedTitleGravity="top"
            app:expandedTitleMarginTop="75dp"
            app:expandedTitleMarginStart="20dp"
            app:expandedTitleTextAppearance="@style/expandedBarTextStyle03"

            app:collapsedTitleGravity="center"
            app:collapsedTitleTextAppearance="@style/collapseBarTextStyle01"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="330dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/reading_topbar"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"/>
                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginBottom="-32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/house_reading" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/transparent"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="130dp"
                        android:fontFamily="@font/baloo"
                        android:text="@string/r_sub_title"
                        android:textColor="@color/reading_topic_words"
                        android:textSize="25sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/dummy_text"/>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>